<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Did You Do Your HOMEWORK YET</string>
    <string name="see_rest_list_string">See full list...</string>
    <string name="action_settings">Settings</string>
    <string name="percent_done_string">Percent complete</string>
    <string name="priority_string">Priority</string>
    <string name="date_string">Date</string>

    <string name="enter_title_string">Enter Title</string>
    <string name="priority_low_string">Low</string>
    <string name="priority_medium_string">Medium</string>
    <string name="priority_high_string">High</string>
    <string name="time_and_date_string">Time and Date</string>
    <string name="no_date_set_string">0000-00-00</string>
    <string name="no_time_set_string">00:00:00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="submit_string">Submit</string>

    <string name="enter_description_string">A short description...</string>
    <string name="urgent_items_string">Urgent Items</string>
    <string name="items_completed">Items completed in the last week:</string>
    <string name="num">#</string>
    <string name="due_string">Items due in the next week:</string>
    <string name="homework_score">Your homework score is:</string>
    <string name="name_string">Name</string>
    <string name="due_date">0000-00-00</string>
    <string name="add_item">Add a new assignment</string>

</resources>
