<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Title -->


    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/time_and_date"
        android:layout_alignStart="@+id/time_and_date">

        <requestFocus />
    </EditText>


    <!-- Description -->

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_description_string"
        android:inputType="textShortMessage"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <requestFocus />
    </EditText>


    <!-- Priority -->

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/priorityGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/priority"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/priority_string" >

        <RadioButton
            android:id="@+id/ItemlowPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_low_string" />

        <RadioButton
            android:id="@+id/ItemmedPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/priority_medium_string" />

        <RadioButton
            android:id="@+id/highPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_high_string" />
    </RadioGroup>

    <!-- Time and Date -->

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_and_date_string"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/priorityGroup"
        android:layout_toLeftOf="@+id/resetButton"
        android:layout_toStartOf="@+id/resetButton"
        android:layout_marginTop="43dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_date_set_string"
        android:layout_below="@+id/time_and_date"
        android:layout_alignLeft="@+id/time_and_date"
        android:layout_alignStart="@+id/time_and_date" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_time_set_string"
        android:layout_above="@+id/date_picker_button"
        android:layout_alignRight="@+id/submitButton"
        android:layout_alignEnd="@+id/submitButton" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date_string"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_time_string"
        android:layout_alignTop="@+id/date_picker_button"
        android:layout_alignRight="@+id/time"
        android:layout_alignEnd="@+id/time" />

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_string" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>