<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <TextView android:id="@+id/footerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/see_rest_list_string"
        android:layout_centerVertical="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#aaaacc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/items_completed"
            android:id="@+id/CompletedTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/num"
            android:id="@+id/CompletedNumView"
            android:layout_above="@+id/textView"
            android:layout_alignRight="@+id/ScoreImageView"
            android:layout_alignEnd="@+id/ScoreImageView"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/due_string"
            android:id="@+id/textView"
            android:layout_below="@+id/CompletedTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/num"
            android:id="@+id/DueNumView"
            android:layout_alignTop="@+id/textView"
            android:layout_alignLeft="@+id/CompletedNumView"
            android:layout_alignStart="@+id/CompletedNumView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/homework_score"
            android:id="@+id/ScoreTextView"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="48dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ScoreImageView"
            android:src="@drawable/a_logo"
            android:layout_alignTop="@+id/ScoreTextView"
            android:layout_toRightOf="@+id/CompletedTextView"
            android:layout_toEndOf="@+id/CompletedTextView" />


    </RelativeLayout>